python/rregadmin/diff/diff_info_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -m rregadmin.registry.types_wrapper -r ^DiffInfoAction -r ^rra_diff_info.* -r ^rra_diff_action.* -r ^rra_di_.* -o diff_info_wrapper.py diff_info_wrapper.xml'
from ctypes import *

from rregadmin.util.ustring_list_wrapper import ustring
from rregadmin.util.value_wrapper import Value
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.util.ustring_list_wrapper import gboolean
from rregadmin.util.value_wrapper import gchar
STRING = c_char_p
from rregadmin.hive.types_wrapper import guint32
from rregadmin.hive.types_wrapper import HiveVersion


# ../../../rregadmin/diff/diff_info.h 33
class rra_diff_info_(Structure):
    pass
rra_diff_info_._fields_ = [
    # ../../../rregadmin/diff/diff_info.h 33
]
rra_diff_info = rra_diff_info_

# values for enumeration 'DiffInfoAction'
RRA_DI_NULL = 0
RRA_DI_ADD_KEY = 1
RRA_DI_DELETE_KEY = 2
RRA_DI_ADD_VALUE = 3
RRA_DI_CHANGE_VALUE = 4
RRA_DI_DELETE_VALUE = 5
RRA_DI_VERSION_CHANGE = 6
RRA_DI_HIVE_NAME_CHANGE = 7
DiffInfoAction = c_int # enum
# ../../../rregadmin/diff/diff_info.h 49
class rra_diff_action_(Structure):
    pass
rra_diff_action_._fields_ = [
    # ../../../rregadmin/diff/diff_info.h 49
    ('action', DiffInfoAction),
    ('data', c_void_p),
]
rra_diff_action = rra_diff_action_
# ../../../rregadmin/diff/diff_info.h 56
class rra_di_value_action_(Structure):
    pass
rra_di_value_action_._fields_ = [
    # ../../../rregadmin/diff/diff_info.h 56
    ('path', POINTER(ustring)),
    ('name', POINTER(ustring)),
    ('val_old', POINTER(Value)),
    ('val_new', POINTER(Value)),
]
rra_di_value_action = rra_di_value_action_
# ../../../rregadmin/diff/diff_info.h 64
rra_diff_info_new = _libraries['librregadmin.so.1'].rra_diff_info_new
rra_diff_info_new.restype = POINTER(rra_diff_info)
# rra_diff_info_new()
rra_diff_info_new.argtypes = []
rra_diff_info_new.__doc__ = \
"""rra_diff_info * rra_diff_info_new()
../../../rregadmin/diff/diff_info.h:64"""
# ../../../rregadmin/diff/diff_info.h 66
rra_diff_info_free = _libraries['librregadmin.so.1'].rra_diff_info_free
rra_diff_info_free.restype = gboolean
# rra_diff_info_free(in_info)
rra_diff_info_free.argtypes = [POINTER(rra_diff_info)]
rra_diff_info_free.__doc__ = \
"""gboolean rra_diff_info_free(rra_diff_info * in_info)
../../../rregadmin/diff/diff_info.h:66"""
# ../../../rregadmin/diff/diff_info.h 68
rra_di_set_compare_value = _libraries['librregadmin.so.1'].rra_di_set_compare_value
rra_di_set_compare_value.restype = gboolean
# rra_di_set_compare_value(in_info, in_val)
rra_di_set_compare_value.argtypes = [POINTER(rra_diff_info), c_int]
rra_di_set_compare_value.__doc__ = \
"""gboolean rra_di_set_compare_value(rra_diff_info * in_info, int in_val)
../../../rregadmin/diff/diff_info.h:68"""
# ../../../rregadmin/diff/diff_info.h 70
rra_di_clear_compare_value = _libraries['librregadmin.so.1'].rra_di_clear_compare_value
rra_di_clear_compare_value.restype = gboolean
# rra_di_clear_compare_value(in_info)
rra_di_clear_compare_value.argtypes = [POINTER(rra_diff_info)]
rra_di_clear_compare_value.__doc__ = \
"""gboolean rra_di_clear_compare_value(rra_diff_info * in_info)
../../../rregadmin/diff/diff_info.h:70"""
# ../../../rregadmin/diff/diff_info.h 72
rra_di_get_compare_value = _libraries['librregadmin.so.1'].rra_di_get_compare_value
rra_di_get_compare_value.restype = c_int
# rra_di_get_compare_value(in_info)
rra_di_get_compare_value.argtypes = [POINTER(rra_diff_info)]
rra_di_get_compare_value.__doc__ = \
"""int rra_di_get_compare_value(unknown * in_info)
../../../rregadmin/diff/diff_info.h:72"""
# ../../../rregadmin/diff/diff_info.h 77
rra_di_value_action_new = _libraries['librregadmin.so.1'].rra_di_value_action_new
rra_di_value_action_new.restype = POINTER(rra_di_value_action)
# rra_di_value_action_new(in_path, in_name, in_val_old, in_val_new)
rra_di_value_action_new.argtypes = [POINTER(ustring), POINTER(ustring), POINTER(Value), POINTER(Value)]
rra_di_value_action_new.__doc__ = \
"""rra_di_value_action * rra_di_value_action_new(ustring * in_path, ustring * in_name, Value * in_val_old, Value * in_val_new)
../../../rregadmin/diff/diff_info.h:77"""
# ../../../rregadmin/diff/diff_info.h 79
rra_di_value_action_free = _libraries['librregadmin.so.1'].rra_di_value_action_free
rra_di_value_action_free.restype = gboolean
# rra_di_value_action_free(in_action)
rra_di_value_action_free.argtypes = [POINTER(rra_di_value_action)]
rra_di_value_action_free.__doc__ = \
"""gboolean rra_di_value_action_free(rra_di_value_action * in_action)
../../../rregadmin/diff/diff_info.h:79"""
# ../../../rregadmin/diff/diff_info.h 81
rra_di_action_to_string = _libraries['librregadmin.so.1'].rra_di_action_to_string
rra_di_action_to_string.restype = STRING
# rra_di_action_to_string(in_action)
rra_di_action_to_string.argtypes = [POINTER(rra_diff_action)]
rra_di_action_to_string.__doc__ = \
"""gchar * rra_di_action_to_string(unknown * in_action)
../../../rregadmin/diff/diff_info.h:81"""
# ../../../rregadmin/diff/diff_info.h 83
rra_di_action_count = _libraries['librregadmin.so.1'].rra_di_action_count
rra_di_action_count.restype = guint32
# rra_di_action_count(in_info)
rra_di_action_count.argtypes = [POINTER(rra_diff_info)]
rra_di_action_count.__doc__ = \
"""guint32 rra_di_action_count(unknown * in_info)
../../../rregadmin/diff/diff_info.h:83"""
# ../../../rregadmin/diff/diff_info.h 86
rra_di_get_action = _libraries['librregadmin.so.1'].rra_di_get_action
rra_di_get_action.restype = POINTER(rra_diff_action)
# rra_di_get_action(in_info, in_index)
rra_di_get_action.argtypes = [POINTER(rra_diff_info), guint32]
rra_di_get_action.__doc__ = \
"""unknown * rra_di_get_action(unknown * in_info, guint32 in_index)
../../../rregadmin/diff/diff_info.h:86"""
# ../../../rregadmin/diff/diff_info.h 89
rra_di_add_key = _libraries['librregadmin.so.1'].rra_di_add_key
rra_di_add_key.restype = gboolean
# rra_di_add_key(in_info, in_path)
rra_di_add_key.argtypes = [POINTER(rra_diff_info), POINTER(ustring)]
rra_di_add_key.__doc__ = \
"""gboolean rra_di_add_key(rra_diff_info * in_info, ustring * in_path)
../../../rregadmin/diff/diff_info.h:89"""
# ../../../rregadmin/diff/diff_info.h 92
rra_di_delete_key = _libraries['librregadmin.so.1'].rra_di_delete_key
rra_di_delete_key.restype = gboolean
# rra_di_delete_key(in_info, in_path)
rra_di_delete_key.argtypes = [POINTER(rra_diff_info), POINTER(ustring)]
rra_di_delete_key.__doc__ = \
"""gboolean rra_di_delete_key(rra_diff_info * in_info, ustring * in_path)
../../../rregadmin/diff/diff_info.h:92"""
# ../../../rregadmin/diff/diff_info.h 96
rra_di_add_value = _libraries['librregadmin.so.1'].rra_di_add_value
rra_di_add_value.restype = gboolean
# rra_di_add_value(in_info, in_path, in_name, in_val)
rra_di_add_value.argtypes = [POINTER(rra_diff_info), POINTER(ustring), POINTER(ustring), POINTER(Value)]
rra_di_add_value.__doc__ = \
"""gboolean rra_di_add_value(rra_diff_info * in_info, ustring * in_path, ustring * in_name, Value * in_val)
../../../rregadmin/diff/diff_info.h:96"""
# ../../../rregadmin/diff/diff_info.h 100
rra_di_delete_value = _libraries['librregadmin.so.1'].rra_di_delete_value
rra_di_delete_value.restype = gboolean
# rra_di_delete_value(in_info, in_path, in_name, in_val)
rra_di_delete_value.argtypes = [POINTER(rra_diff_info), POINTER(ustring), POINTER(ustring), POINTER(Value)]
rra_di_delete_value.__doc__ = \
"""gboolean rra_di_delete_value(rra_diff_info * in_info, ustring * in_path, ustring * in_name, Value * in_val)
../../../rregadmin/diff/diff_info.h:100"""
# ../../../rregadmin/diff/diff_info.h 104
rra_di_change_value = _libraries['librregadmin.so.1'].rra_di_change_value
rra_di_change_value.restype = gboolean
# rra_di_change_value(in_info, in_path, in_name, in_val_old, in_val_new)
rra_di_change_value.argtypes = [POINTER(rra_diff_info), POINTER(ustring), POINTER(ustring), POINTER(Value), POINTER(Value)]
rra_di_change_value.__doc__ = \
"""gboolean rra_di_change_value(rra_diff_info * in_info, ustring * in_path, ustring * in_name, Value * in_val_old, Value * in_val_new)
../../../rregadmin/diff/diff_info.h:104"""
# ../../../rregadmin/diff/diff_info.h 107
rra_di_change_version = _libraries['librregadmin.so.1'].rra_di_change_version
rra_di_change_version.restype = gboolean
# rra_di_change_version(in_info, in_version)
rra_di_change_version.argtypes = [POINTER(rra_diff_info), POINTER(HiveVersion)]
rra_di_change_version.__doc__ = \
"""gboolean rra_di_change_version(rra_diff_info * in_info, HiveVersion * in_version)
../../../rregadmin/diff/diff_info.h:107"""
# ../../../rregadmin/diff/diff_info.h 110
rra_di_change_hive_name = _libraries['librregadmin.so.1'].rra_di_change_hive_name
rra_di_change_hive_name.restype = gboolean
# rra_di_change_hive_name(in_info, in_name)
rra_di_change_hive_name.argtypes = [POINTER(rra_diff_info), POINTER(ustring)]
rra_di_change_hive_name.__doc__ = \
"""gboolean rra_di_change_hive_name(rra_diff_info * in_info, ustring * in_name)
../../../rregadmin/diff/diff_info.h:110"""
__all__ = ['rra_di_value_action_new', 'rra_di_change_version',
           'rra_di_delete_value', 'RRA_DI_CHANGE_VALUE',
           'rra_di_add_key', 'rra_di_get_compare_value',
           'RRA_DI_DELETE_KEY', 'rra_diff_action_', 'rra_diff_info_',
           'rra_di_clear_compare_value', 'RRA_DI_HIVE_NAME_CHANGE',
           'rra_diff_info_new', 'RRA_DI_ADD_KEY',
           'rra_di_value_action_', 'rra_diff_action',
           'rra_di_value_action', 'RRA_DI_ADD_VALUE',
           'rra_di_value_action_free', 'RRA_DI_NULL',
           'rra_di_get_action', 'DiffInfoAction', 'rra_diff_info',
           'rra_di_change_hive_name', 'RRA_DI_VERSION_CHANGE',
           'rra_diff_info_free', 'rra_di_delete_key',
           'rra_di_action_to_string', 'rra_di_set_compare_value',
           'rra_di_add_value', 'rra_di_action_count',
           'RRA_DI_DELETE_VALUE', 'rra_di_change_value']
